--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "start": "vite preview"
+    "start": "npm run build && node server.cjs",
+    "build": "tsc && vite build"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "vite-plugin-handlebars": "^2.0.0"
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
-    "sass": "^1.69.7",
+    "express": "^4.18.3",
+    "handlebars": "^4.7.8",
+    "sass": "^1.71.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.1.4"
   }
 }
 
