--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "devDependencies": {
     "express": "^4.18.3",
     "handlebars": "^4.7.8",
+    "prettier": "^3.2.5",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
 }
-
